--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         function navigateToNextPage() {
             // Redirect to the next page
-            window.location.href = "next_page.html"; // Change "next_page.html" to the URL of your next page
+            window.location.href = "https://febb-nine.vercel.app/"; 
         }
     </script>
 </body>
