--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         function navigateToNextPage() {
             // Redirect to the next page
-            window.location.href = "https://febb-nine.vercel.app/"; 
+            window.location.href = "https://go-orpin-phi.vercel.app/"; 
         }
     </script>
 </body>
