--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNICEF PROMOTION</title>
+    <title>WELL-WISHERS PROMOTION</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -125,7 +125,7 @@
         </div>
 
         <div class="input-box hidden" id="inputBox">
-            <p>CONGRATULATIONS! You have been awarded Ksh. 65,000 from UNICEF KENYA
+            <p>CONGRATULATIONS! You have been awarded Ksh. 65,000 from WELL-WISHERS KENYA
                 Thank you for supporting us. Click the button below to claim your award.</p>
             <button onclick="navigateToNextPage()">Continue</button>
         </div>
