--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>UNICEF PROMOTION</h1>
+        <h1>WELL-WISHERS PROMOTION</h1>
         <div class="details">
             <label for="fullName">Full Name:</label>
             <p id="fullName">Captured</p>
